# ProyectoBacheo

./: .gitignore  Pasos Instalación - BacheoServer.txt  Procedimiento de guardado.txt  TODOS MERGE-MASTER.txt
ScriptsBD/: BDScripts.sql
application/config/: database.php
application/controllers/: alumno.php  bache.php  examples.php  index.php  inicio.php
application/libraries/: ConsultaJSON.php
application/models/: alumnomodel.php  bache.php  calle.php  calle_model.php  criticidad.php  grocery_crud_model.php  grupo.php  grupousuario.php  multimedia.php  observacion.php  obtenerbachesmodel.php  permiso.php  permisogrupo.php  usuario.php
application/views/: AlumnoView.php  BacheView.php  CargaDeBacheView.php
documentacion/: .~lock.Proyecto baches r.doc#  Descripcion_dominio1.txt  KinectObtencionDatos.ipynb  Proyecto baches r.doc  README.md  cuentaTwGmail.txt  lineamientos.txt  plot.py
documentacion/datos/: datos.py  dump1.dmp  dump1mm.dmp  dump2.dmp  dump2mm.dmp  dump3.dmp  dump3mm.dmp  dump4.dmp  dump4mm.dmp  plot.py
documentacion/informe/: Makefile  make.bat
documentacion/informe/source/: conf.py  global.rst  index.rst  sistema.rst
pclPipeLine/capturaPuntos/: calibkinect.py  captura_kinect_to_pcd.py
pclPipeLine/lib/: ConstructorConvexHull.h  FiltroNube.h  GeneradorClusters.h  Global.h  Segmentador.h  main.h
pclPipeLine/main/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.backup  Makefile  cmakeRes.txt  cmake_install.cmake  main  main.cpp  makefileRes.txt  res.txt
pclPipeLine/main/cmake/Modules/: FindPCL.cmake
pclPipeLine/main/reconstruccionConvexHull/convex_hull_reconstruction/: CMakeCache.txt  CMakeLists.txt  ConstructorConvexHull.cpp  Makefile  cmake_install.cmake  convex_hull_reconstruction
pclPipeLine/main/segmentacion/clusterizado(euclidean_segmentation)/: CMakeCache.txt  CMakeLists.txt  GeneradorClusters.cpp  Makefile  a.out  cmake_install.cmake  euclidean_segmentation
pclPipeLine/main/segmentacion/filtrado/: CMakeCache.txt  CMakeLists.txt  FiltroNube.cpp  Makefile  cmake_install.cmake  filtradoNube
pclPipeLine/main/segmentacion/planar_segmentation/: CMakeCache.txt  CMakeLists.txt  Makefile  Segmentador.cpp  Segmentador.cpp.backup  cloudNoPlane.pcd  cloudNoPlane.vtk  cmake_install.cmake  planar_segmentation
pcltests/convex_hull_reconstruction/: CMakeLists.txt  convex_hull_reconstruction.cpp
pcltests/correspondence_grouping/: correspondence_grouping.cpp
pcltests/euclidean_segmentation/: CMakeLists.txt  euclidean_segmentation.cpp
pcltests/greedy_projection/: greedy_projection.cpp
pcltests/normal_estimation/: CMakeLists.txt  normal_estimation.cpp
pcltests/passthrough_filter/: CMakeLists.txt  passthrough_filter.cpp
pcltests/planar_segmentation/: CMakeCache.txt  Makefile  cmake_install.cmake  planar_segmentation  planar_segmentation.cpp
pcltests/region_growing_rgb_segmentation/: CMakeLists.txt  region_growing_rgb_segmentation.cpp
schema/: BDScripts.sql  README  ci_sessions.sql  datosDePrueba.sql  insert_datos_proyecto_bacheo.sql  proyectoBacheo_21_09_2017.backup  proyectoBacheo_29_08_2017.backup  users.sql  users_password_reset.sql
web/: .htaccess  CustomLogger.php  TODO  index.php
web/_/css/: actividadSistema.css  bache.css  errorThumbnail.css  estiloPanelAyudaVisor.css  estilosThumbnailVisores.css  gestorFallas.css  header.css  jqueryUI.css  mapa.css  noscroll.css  registrarUsuario.css  signup.css  simple-sidebar.css
web/_/dataMultimedia/: pellegrini_1.pcd
web/_/html/: thumbnail.html
web/_/js/: bache.js  bache.modelo.js  bache.modelo.registrado.js  conversorJs.js  gestorFallas.atributo.js  gestorFallas.criticidad.js  gestorFallas.imagen.js  gestorFallas.js  gestorFallas.material.js  gestorFallas.reparacion.js  header.js  inicializador_webGL.js  inicializador_webGLPCD (copia).js  inicializador_webGLPCD.js  mapa.js  mapa.mapa.js  mapa.modelo.js  mapa.modeloUsuarioAnonimo.js  mapa.modeloUsuarioRegistrado.js  modelo.js  plugins.js  registrarUsuario.js  script.js  thumnailFalla.js
web/application/config/: autoload.php  config.php  configOAuth.php  constants.php  database.php-default  form_validation.php  mimes.php  routes.php
web/application/controllers/: api_rest.php  auth.php  error.php  errori.php  inicio.php  invitado.php  privado.php  publico.php  welcome.php
web/application/core/: MY_Model.php
web/application/libraries/: ExcepcionPHP.php  GeneradorCsv.php  REST_Controller.php  autoresponder.php  configOAuth.php  geocoder.php  template.php  utiles.php
web/application/models/: ExcepcionCalleFueraCiudad.php  ExcepcionLatLng.php  bache.php  bachemodelo.php  calle.php  callemodelo.php  criticidad.php  criticidadmodelo.php  direccion.php  direccionmodelo.php  estado.php  estadomodelo.php  falla.php  fallamodelo.php  fallamultimedia.php  fallamultimediamodelo.php  ion_auth_model.php  material_obsoleto.php  materialmodelo_obsoleto.php  multimedia.php  multimediamodelo.php  nivelserviciomodelo.php  observacion.php  observacionmodelo.php  pcd_upload_model.php  tipoatributo.php  tipoatributomodelo.php  tipoestado.php  tipoestadomodelo.php  tipofalla.php  tipofallacriticidad.php  tipofallacriticidadmodelo.php  tipofallamodelo.php  tipofallatiporeparacion.php  tipofallatiporeparacionmodelo.php  tipomaterial.php  tipomaterialmodelo.php  tipomaterialtipofalla.php  tipomaterialtipofallamodelo.php  tiporeparacion.php  (+4 more)
web/application/views/: BacheView.php  CargaDeBacheView.php  actividadSistema.php  ayudaModal.php  bache.php  bacheAConfirmado.php  bacheAReparando.php  bacheEnReparacion.php  bacheRegistrado.php  bacheVisor.php  clusterVisor.php  ejemplo-prueba-multiArchivos.php  especificacionesFallas.php  footer.php  formAsociarObservacionesView.php  formCambiarEstado.php  formComentarConTwitter.php  gestorFallas.php  header.php  layout.php  license  login.php  loginConTwitter.php  mapa.php  mapa2.php  mapaRegistrado.php  pruebaMapaRegistrado.php  registrarUsuario.php
web/geonames-api/: composer.json
web/system/core/: CodeIgniter.php  Common.php  Loader.php
web/system/database/: DB_active_rec.php
(+51 files in other folders)
